--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "webauth-i-challenge",
   "version": "1.0.0",
-  "description": "web-auth-1-challenge",
+  "description": "Authentication Sprint",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon",
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/scottschindler/webauth-i-challenge.git"
-  },
-  "author": "scott schindler",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/scottschindler/webauth-i-challenge/issues"
-  },
-  "homepage": "https://github.com/scottschindler/webauth-i-challenge#readme",
+  "keywords": [],
+  "author": "Scott Schindler",
   "dependencies": {
-    "brcypt": "^1.0.1",
-    "knex": "^0.19.2",
-    "sqlite": "^3.0.3"
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "helmet": "^3.19.0",
+    "knex": "^0.19.0",
+    "sqlite3": "^4.0.9"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
